<resources>
    <string name="app_name">Tankopedia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="tank_list_label">Tank List Fragment</string>
    <string name="tank_details_label">Tank Details Fragment</string>
    <string name="tank_form_label">Tank Form Fragment</string>
    <string name="previous">Previous</string>

    <string name="welcome_text">Tankopedia</string>
    <string name="random_header">Here is a random number between 0 and %d.</string>
    <string name="search_button_text">Search</string>
    <string name="add_button_text">Add tank</string>
    <string name="count_button_text">Count</string>
    <string name="tank_list_header_text">World of Tanks</string>
    <string name="modify_tank_button_text">Modify</string>
    <string name="delete_tank_button_text">Delete</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="back_button_text">Back</string>

    <string name="details_country">Country: %s</string>
    <string name="details_type">Type: %s</string>
    <string name="details_year">Year: %d</string>
    <string name="details_gun">Gun: %s</string>
    <string name="details_engine">Engine: %s</string>
    <string name="details_crew">Number of crew members: %d</string>
    <string name="details_armour_layout">Armour Layout:</string>
    <string name="details_front_armour">%d mm</string>
    <string name="details_side_armour">%d mm</string>
    <string name="details_rear_armour">%d mm</string>

    <string name="name_hint">Tank name</string>
    <string name="country_hint">Tank country</string>
    <string name="type_hint">Tank type:</string>
    <string name="year_hint">Year:</string>
    <string name="crew_hint">Number of crew members:</string>
    <string name="gun_hint">Tank gun</string>
    <string name="engine_hint">Tank engine</string>
    <string name="armour_hint">Armour:</string>
    <string name="front_hint">Front</string>
    <string name="side_hint">Side</string>
    <string name="rear_hint">Rear</string>
    <string name="image_url_hint">Image URL</string>
    <string name="description_hint">Description</string>

    <string-array name="types_array">
        <item>Light Tank</item>
        <item>Medium Tank</item>
        <item>Heavy Tank</item>
        <item>Tank Destroyer</item>
        <item>SP Artillery</item>
        <item>MBT</item>
        <item>IFV</item>
    </string-array>
</resources>