<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="hu.me.iit.tankopedia.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_TankList"
            app:destination="@id/TankList" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="hu.me.iit.tankopedia.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="myArg"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/TankList"
        android:name="hu.me.iit.tankopedia.TankList"
        android:label="@string/tank_list_label"
        tools:layout="@layout/tank_list">
        <action
            android:id="@+id/action_TankList_to_TankDetails"
            app:destination="@id/TankDetails" />
        <action
            android:id="@+id/action_TankList_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/TankDetails"
        android:name="hu.me.iit.tankopedia.TankDetails"
        android:label="@string/tank_details_label"
        tools:layout="@layout/tank_details">
        <argument
            android:name="tank"
            app:argType="integer" />
    </fragment>
</navigation>